--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mini Juego Romántico</title>
+  <title>Cumpleaños Feliz💕</title>
   <style>
     body {
       background: #fff0f5;
@@ -46,18 +46,18 @@
   </style>
 </head>
 <body>
-  <div id="mensaje">Presioná el botón para un mensaje romántico 💖</div>
+  <div id="mensaje">Apretame varias veces💕</div>
   <button id="btnMostrar">Mostrar mensaje</button>
 
   <script>
     const mensajes = [
-      "Eres la luz que ilumina mis días ✨",
-      "Cada momento contigo es un tesoro 💎",
-      "Tu sonrisa es mi alegría diaria 😊",
-      "Eres mi sueño hecho realidad 🌙",
-      "Amarte es mi mejor aventura 💕",
-      "Contigo, todo es posible 💫",
-      "Tu amor me completa ❤️"
+      "Feliz Cumple hermosa ✨",
+      "Te amo y te deseo lo mejor 💎",
+      "Feliz Legalidad 😊",
+      "Siempre vas a estar en mi corazon 🌙",
+      "y siempre te voy a amar 💕",
+      "Pasala hermoso 💫",
+      "Te amo Cele💕❤️💕"
     ];
 
     const btnMostrar = document.getElementById('btnMostrar');
